--- a/master.css
+++ b/master.css
@@ -1,113 +1,242 @@
+#top {
+  position: -webkit-sticky;
+  position: sticky;
+  background-image: linear-gradient(to bottom, white, transparent);
+  position: fixed;
+  top: 0;
+  height: 3em;
+  width: 100%;
+  z-index: 2;
+
+}
+
 body {
   background-image: linear-gradient(to bottom, white, white, white, #ffcd9f);
   overflow-x: hidden;
+  font-family: Arial, sans-serif;
+  font-size: 1.2em;
+  padding-bottom: 10em;
 }
-body section{
+
+section{
   min-height: 100vh;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 5em;
 }
 
-#bio, #education {
-  grid-template-columns: auto 35% 35% auto;
-  grid-template-rows: auto 70% auto;
-  grid-column-gap: 5%;
+#bio { min-height: 90vh; }
+
+
+#bio > div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-  #bio > div{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+#bio .details {
+  background-image: url("media/me-tied.jpg");
+  padding-left: 2%;
+
+}
+#bio .details p {
+  background-color: #ffffffaa;
+
+}
+
+#me-photo img{
+  display: none;
+}
+
+#me-grdt {
+  display: none;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  background-image: linear-gradient(to bottom , transparent, transparent, transparent, transparent, transparent, #ffffff);
+}
+footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background-image: linear-gradient(to top, white, white, #ffffffaa, transparent);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: 2;
+  left: 0;
+}
+
+footer > div {
+  flex-basis: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  flex-wrap: wrap;
+}
+
+#contact {
+  display: none;
+}
+
+#education > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.portfolio {
+  min-height: 100vh;
+}
+
+.portfolio-header {
+  align-items: center;
+  margin-bottom: 8%;
+}
+
+.portfolio > div {
+  display: flex;
+}
+.portfolio-header img {
+  width: 50%;
+  height: auto;
+}
+
+.portfolio .details {
+  flex-direction: column;
+}
+
+.portfolio .images {
+}
+
+.tech-stack {
+  justify-content: space-between;
+}
+
+.tech-stack img {
+  max-width: 20vw;
+  height:auto;
+}
+
+@media screen and (min-width: 600px) {
+  body {
+    font-size: 20px;
+  }
+  section{
+    display: grid;
   }
 
-  #me-photo{
-    grid-area: 2 / 2;
-    position: relative;
+  #bio {
+    background-image: none;
   }
 
-  #bio .details{
-    grid-area: 2 / 3;
-  }
-
-  #me-grdt {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    z-index: 1;
-    background-image: linear-gradient(to right, transparent, transparent, transparent, transparent, transparent, #ffffff);
-  }
-
-  #education > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  #open-logo {
-    grid-area: 2 / 2;
-  }
-
-  #education .details {
-    grid-area: 2 / 3;
-  }
-
-
-
-  .portfolio {
-    grid-template-rows: 15% 70% auto;
-    grid-template-columns: auto 40% 40% 15%;
-    grid-row-gap: 2%;
-  }
-
-  .portfolio > div {
-    display: flex;
-    justify-content: center;
-  }
-
-  .portfolio .portfolio-header {
-    grid-area: 1 / 2;
-    align-items: center;
-  }
-
-  .portfolio-header img {
-    width: 50%;
-    height: auto;
-  }
-
-  .portfolio .details {
-    grid-area: 2 / 2;
-    flex-direction: column;
-  }
-
-  .portfolio .images {
-    grid-area: 2 / 3;
+  #bio .details {
+    background-image: none;
+    color: black;
 
   }
 
-  .portfolio .tech-stack {
-    grid-area: 2 / 4;
-    flex-direction: column;
-    justify-content: space-around;
-    margin-right: 3vw;
+  #bio, #education {
+    grid-template-columns: auto 35% 35% auto;
+    grid-template-rows: auto 70% auto;
+    grid-column-gap: 5%;
   }
 
-  footer {
-  /*  position: -webkit-sticky;
-    position: sticky;*/
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-image: linear-gradient(to top, white, white, #ffffffaa, transparent);
-    padding-top: 4rem;
-    padding-bottom: 2rem;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
 
-  }
+    #me-photo{
+      grid-area: 2 / 2;
+      position: relative;
+    }
 
-  footer > div {
-    flex-basis: 50%;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-  }
+    #me-photo img{ display: block; }
+
+    #bio .details{
+      grid-area: 2 / 3;
+    }
+
+    #me-grdt {
+      display:block;
+      background-image: linear-gradient(to right, transparent, transparent, transparent, transparent, transparent, #ffffff);
+    }
+
+    #education > div {
+    }
+
+    #open-logo {
+      grid-area: 2 / 2;
+    }
+
+    #education .details {
+      grid-area: 2 / 3;
+    }
+
+
+
+    .portfolio {
+      grid-template-rows: 15% 70% auto;
+      grid-template-columns: auto 40% 40% 15%;
+      grid-row-gap: 2%;
+    }
+
+    .portfolio > div {
+      display: flex;
+      justify-content: center;
+    }
+
+    .portfolio-header {
+      grid-area: 1 / 2;
+      align-items: center;
+    }
+
+    .portfolio-header img {
+      width: 50%;
+      height: auto;
+    }
+
+    .portfolio .details {
+      grid-area: 2 / 2;
+      flex-direction: column;
+    }
+
+    .portfolio .images {
+      grid-area: 2 / 3;
+
+    }
+
+    .tech-stack {
+      grid-area: 2 / 4;
+      flex-direction: column;
+      justify-content: space-around;
+      margin-right: 3vw;
+    }
+
+    .tech-stack img[src="media/bootstrap.png"] {
+      max-width: 40%;
+      align-self: center;
+    }
+
+    footer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-image: linear-gradient(to top, white, white, #ffffffaa, transparent);
+      padding-top: 4rem;
+      padding-bottom: 2rem;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+
+    }
+
+    footer > div {
+      flex-basis: 50%;
+      display: flex;
+      justify-content: space-around;
+      align-items: flex-end;
+    }
+    #contact {
+      display: flex;
+    }
+}
