--- a/master.css
+++ b/master.css
@@ -233,3 +233,36 @@ footer > div {
       display: flex;
     }
 }
+
+/* Style for the modal overlay */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+/* Style for the modal content */
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  width: 80%;
+  max-width: 800px;
+}
+
+/* Style for the close button */
+.close {
+  position: absolute;
+  padding: 5px;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+}
